--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
  	save = !git add -A && git commit -m 'SAVEPOINT'
  	undo = reset HEAD~1 --mixed
  	wipe = !git add -A && git commit -qm 'WIPE SAVEPOINT' && git reset HEAD~1 --hard
+	set-upstream = !git branch --set-upstream-to=origin/$(git symbolic-ref --short HEAD)
 [pull]
 	ff = only
 [push]
